--- a/TicTacToe/TicTacToe/TicTacToe.vcxproj.filters
+++ b/TicTacToe/TicTacToe/TicTacToe.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Board.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TicTacToe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
